<resources>
    <string name="app_name">Shopping List</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordSubmit">Password:</string>
    <string name="usernameSubmit">Username:</string>
    <string name="email">Email:</string>
    <string name="welcome">WELCOME</string>
    <string name="new_list">NEW LIST</string>
    <string name="see_shared_lists">SEE SHARED LISTS</string>
    <string name="newListDialogMessage">Are you sure you want to create new list?</string>
    <string name="newListDialogTitle">New List Dialog</string>
    <string name="ok">OK</string>
    <string name="list_title">List title</string>
    <string name="shared_list">Shared list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">REFRESH</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrectLogin">Incorrect user name or password</string>
    <string name="add">ADD</string>
    <string name="DB_NAME">shared_list_app.db</string>
    <string name="title">TITLE</string>

    <string name="POST_LOGIN_URL">http://192.168.209.246:3000/login</string>
    <string name="POST_REGISTER_URL">http://192.168.209.246:3000/users</string>
    <string name="POST_NEW_LIST_URL">http://192.168.209.246:3000/lists</string>
    <string name="GET_LISTS_URL">http://192.168.209.246:3000/lists</string>
    <string name="DELETE_LISTS_URL">http://192.168.209.246:3000/lists</string>
    <string name="POST_CREATE_ITEM_URL">http://192.168.209.246:3000/tasks</string>
    <string name="DELETE_ITEM_URL">http://192.168.209.246:3000/tasks</string>
    <string name="GET_ITEMS_URL">http://192.168.209.246:3000/tasks</string>
    <string name="POST_CHANGE_DONE_URL">http://192.168.209.246:3000/tasks/change</string>

</resources>